# QB-Tree

./: Brightkite-1.cpp  Brightkite-1.txt  Brightkite-2.cpp  CMakeLists.txt  Gowalla-2.txt  README.md  gowalla-1.cpp  gowalla-2.cpp
figure/: Brightkite-1.eps  Brightkite-1.gnu  Brightkite-2.eps  Brightkite-2.gnu  Brightkite-2.txt  Gowalla-1.eps  Gowalla-1.gnu  Gowalla-1.txt  Gowalla-2.eps  Gowalla-2.gnu  draw.bash  legend1.eps  legend1.gnu  legend2.eps  legend2.gnu
